fix image ratio not being preserved for too wide images in preview

--- a/css/forms.css
+++ b/css/forms.css
@@ -27,7 +27,7 @@
                 cursor: pointer;
                 img {
                     display: block;
-                    height: 100%;
+                    max-height: 100%;
                     max-width: 100%;
                     margin-left: auto;
                     margin-right: auto;
